--- a/app_server/views/location-info.pug
+++ b/app_server/views/location-info.pug
@@ -33,20 +33,21 @@ block content
           .card.card-primary
             .card-block
               h2.card-title Location map
-              img.img-fluid.rounded(src='https://maps.googleapis.com/maps/api/staticmap?center=${location.coords.lat},${location.coords.lng}&zoom=13&size=600x300&maptype=roadmap&sensor=false&markers=${location.coords.lat},${location.coords.lng}&key=AIzaSyAipGfBrpl6RVQh_9vQbgZnqLrfx3J9fKE&scale=2')
+              img.img-fluid.img-map-size.rounded(src=`https://maps.googleapis.com/maps/api/staticmap?center=${location.coords.lat},${location.coords.lng}&zoom=14&size=600x300&maptype=roadmap&markers=color:blue%7Clabel:S%7C${location.coords.lat},${location.coords.lng}&key=AIzaSyAipGfBrpl6RVQh_9vQbgZnqLrfx3J9fKE&scale=2`)
       .row
         .col-12
           .card.card-primary.review-card
             .card-block
-              a.btn.btn-primary.float-right(href='/location/review/new') Add review
+              a.btn.btn-primary.float-right(href=`/location/${location._id}/review/new`) Add review
               h2.card-title Customer reviews
               each review in location.reviews 
                 .row.review
                   .col-12.no-gutters.review-header
                     span.rating
                       +outputRating(review.rating)
-                    span.reviewAuthor #{review.author}
-                    small.reviewTimestamp &nbsp; #{review.timestamp}
+                    span.reviewAuthor  #{review.author}
+                    small.reviewTimestamp &nbsp;
+                      +formatDate(review.createdOn)
                   .col-12
                     p !{(review.reviewText).replace(/\n/g, '<br/>')}
     .col-12.col-lg-3
