--- a/app_server/views/locations-list.pug
+++ b/app_server/views/locations-list.pug
@@ -1,25 +1,24 @@
 extends layout
+
 include _includes/sharedHTMLfunctions
+
 block content
   .row.banner
     .col-12
       h1= pageHeader.title
-        small &nbsp;#{pageHeader.strapline}
+        small &nbsp;#{pageHeader.strapLine}
 
   .row
     .col-12.col-md-8
       .error= message
-      each location in locations
-        .card
-          .card-block
-            h4
-              a(href=`/location/${location.id}`)= location.name
-              +outputRating(location.rating)
-              span.badge.badge-pill.badge-default.float-right= location.distance
-            p.address= location.address
-            .facilities
-              each facility in location.facilities
-                span.badge.badge-warning= facility
+
+      app-home-list
+
 
     .col-12.col-md-4
       p.lead= sidebar
+
+block scripts
+  script(src='/build/runtime.e227d1a0e31cbccbf8ec.js')
+  script(src='/build/polyfills.a4021de53358bb0fec14.js')
+  script(src='/build/main.57b56c1d547a6c96a03f.js')
