--- a/app_public/src/app/home-list/home-list.component.html
+++ b/app_public/src/app/home-list/home-list.component.html
@@ -1,14 +1,9 @@
+<div class="error">{{message}}</div>
 <div class="card" *ngFor="let location of locations">
     <div class="card-block">
         <h4>
             <a href="/location/{{location.id}}">{{location.name}}</a>
-            <small>&nbsp;
-        <i class="fa{{location.rating <1 ? 'r' : 's'}} fa-star"></i>
-        <i class="fa{{location.rating <2 ? 'r' : 's'}} fa-star"></i>
-        <i class="fa{{location.rating <3 ? 'r' : 's'}} fa-star"></i>
-        <i class="fa{{location.rating <4 ? 'r' : 's'}} fa-star"></i>
-        <i class="fa{{location.rating <5 ? 'r' : 's'}} fa-star"></i>
-      </small>
+            <app-rating-stars [rating]="location.rating"></app-rating-stars>
         </h4>
         <span class="badge badge-pill badge-default float-right">{{location.distance | distance}}</span>
         <p class="address">{{location.address}}</p>
