--- a/app_public/src/app/home-list/home-list.component.html
+++ b/app_public/src/app/home-list/home-list.component.html
@@ -2,7 +2,7 @@
 <div class="card" *ngFor="let location of locations">
     <div class="card-block">
         <h4>
-            <a href="/location/{{location.id}}">{{location.name}}</a>
+            <a routerLink="/location/{{location.id}}">{{location.name}}</a>
             <app-rating-stars [rating]="location.rating"></app-rating-stars>
         </h4>
         <span class="badge badge-pill badge-default float-right">{{location.distance | distance}}</span>
